Completed IoT Analysis along with antenna stuff

--- a/eecs-thesis-template-main/common/references/references.bib
+++ b/eecs-thesis-template-main/common/references/references.bib
@@ -351,7 +351,61 @@
   keywords={IEEE standards;Antennas;Terminology;antennas;definitions;propagation;terminology},
   doi={10.1109/IEEESTD.1993.119664}}
 
+@misc{flightradar24,
+  title = {Build Your Own ADS-B Ground Station},
+  author = {{Flightradar24}},
+  year = {2024},
+  howpublished = {\url{https://www.flightradar24.com/build-your-own}},
+  note = {Accessed: 2024-09-01}
+}
 
+@INBOOK{IoTdefinition,
+  author={},
+  booktitle={Internet of Things A to Z: Technologies and Applications}, 
+  title={Introduction to the Internet of Things}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={1-50},
+  keywords={Internet of Things;Business;Computers;Sensors;Pervasive computing;Information systems},
+  doi={10.1002/9781119456735.ch1}}
+
+@INPROCEEDINGS{FPGAhardware,
+  author={Michalak, Filip and Zabołotny, Wojciech and Podkalicki, Łukasz and Malanowski, Mateusz and Piasecki, Marcin and Kulpa, Krzysztof},
+  booktitle={2022 23rd International Radar Symposium (IRS)}, 
+  title={Universal RFSoC-based Signal Recorder for Radar Applications}, 
+  year={2022},
+  volume={},
+  number={},
+  pages={136-140},
+  keywords={Passive radar;Semiconductor device measurement;Protocols;Process control;Signal processing;Mechanical variables measurement;Software;RFSoC;software-defined radio;signal recording;passive radar;FADE protocol;FPGA},
+  doi={10.23919/IRS54158.2022.9905032}}
+
+
+@online{sbc_hardware,
+  author    = {{XDA Developers}},
+  title     = {Best Single Board Computers},
+  year      = {2024},
+  url       = {https://xda-developers.com/best-single-board-computer/},
+  note      = {Accessed: 2024-09-01}
+}
+
+
+@online{core_electronics_rpi5,
+  author    = {{Core Electronics}},
+  title     = {Raspberry Pi 5 Model B (8GB)},
+  year      = {2024},
+  url       = {https://core-electronics.com.au/raspberry-pi-5-model-b-8gb.html?gad_source=1&gclid=Cj0KCQjw_sq2BhCUARIsAIVqmQtpx455hPFLvojanGEqLxQeD4DVyw90AASBabzCCzlFmi88saIqMv8aAp9JEALw_wcB},
+  note      = {Accessed: 2024-09-01}
+}
+
+@article{rpi5_wifi,
+  author = {Avram Piltch},
+  title = {Raspberry Pi 5's Wi-Fi Gets Faster},
+  year = {2024},
+  url = {https://www.tomshardware.com/news/raspberry-pi-5-wi-fi-faster},
+  note = {Accessed: 2024-09-01}
+}
 
 
 
