Finished hardware methodology and tweaked abstract

--- a/eecs-thesis-template-main/common/references/references.bib
+++ b/eecs-thesis-template-main/common/references/references.bib
@@ -407,6 +407,15 @@
   note = {Accessed: 2024-09-01}
 }
 
+@misc{pushbuttons,
+  author       = {Adafruit},
+  title        = {16mm Illuminated Pushbutton},
+  year         = {2024},
+  url          = {https://www.adafruit.com/product/1439},
+  note         = {Accessed: 2024-09-01}
+}
+
+
 
 
 
