--- a/eecs-thesis-template-main/thesis/sections/01_body/00_introduction.tex
+++ b/eecs-thesis-template-main/thesis/sections/01_body/00_introduction.tex
@@ -22,13 +22,13 @@ Bistatic passive radar detection has a wide range of applications centered aroun
 % \noindent More specifically, the project will focus on streamlining the signal processing and computational requirements of both the line of sight signal and the reflected target signal onto a singular embedded setup, without PC hardware. This will be achieved by using a combination of existing embedded IoT hardware, and through using existing DSP (digital signal processing) and radar filtering algorithms. Initially, the illuminator of opportunitys explored are digital broadcast signals, and the target signal will be aerial vehicles. Noting that a range of other terrestrial illuminator signals can be utilised, often depending on the required use case, such as the tracking target and environment \cite{DABsignal}.
 % %%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Aims and Objectives}
+\section{Aims and Objectives} \label{sec:aims}
 To explore the feasibility of a low cost embedded passive bistatic radar detection, and provide a scaleable proof of concept, this thesis aims to provide a user friendly testbed for digital signal based passive radar detection. The work conducted in this thesis and the eventual prototype hopes to decrease the barriers to entry for passive radar detection technology, and provide a platform for further research and development in the field. At a high level, the primary objectives of this thesis project are;
-\begin{itemize}
-    \item Develop an understanding and proof of concept of passive radar detection algorithms on low cost single board computers (SBC) connected to software defined radio (SDR) hardware,
-    \item Design and implement a small sized modular passive radar detection system on single board computer hardware with an emphasis on user friendliness and scaleability, and to
-    \item Verify the functionality of the low cost embedded passive radar detection system in a controlled environment against higher power computing results, and investigate the potential for scaling up to a multistatic system through a network.
-\end{itemize}
+\begin{enumerate}
+    \item Develop an understanding and proof of concept of passive radar detection algorithms on low cost single board computers (SBC) connected to software defined radio (SDR) hardware.
+    \item Design and implement a small-sized modular passive radar detection system on single board computer hardware with an emphasis on user friendliness and scalability.
+    \item Verify the functionality of the low cost embedded passive radar detection system in a controlled environment against higher power computing results, and investigate the potential for scaling up to a multistatic system through a network. \todo{also compare SDR modules?}
+\end{enumerate}
 
 \section{Scope}
 This thesis focuses on the development of a hardware testbed based on software defined radio (SDR) and single board computer (SBC) technology. The scope of this thesis project is limited to the following:
