More detail on DAB standard

--- a/eecs-thesis-template-main/common/references/references.bib
+++ b/eecs-thesis-template-main/common/references/references.bib
@@ -415,6 +415,22 @@
   note         = {Accessed: 2024-09-01}
 }
 
+@misc{DABaustralia,
+  author       = {Anthony Eden},
+  title        = {Digital Radio in Australia: DAB+ Technical Overview},
+  year         = {2023},
+  url          = {https://www.mediarealm.com.au/articles/digital-radio-australia-dabplustechnical-overview/},
+  note         = {Accessed: 2024-09-02}
+}
+
+@misc{etsi_DAB_standard,
+  author       = {{ETSI}},
+  title        = {EN 300 401 - Radio Broadcasting Systems; Digital Audio Broadcasting (DAB) to Mobile, Portable, and Fixed Receivers},
+  year         = {2016},
+  howpublished = {\url{https://www.etsi.org/deliver/etsi_en/300400_300499/300401/02.01.01_60/en_300401v020101p.pdf}},
+  note         = {Accessed: 2024-09-02}
+}
+
 
 
 
