--- a/eecs-thesis-template-main/thesis/sections/01_body/03_methodology.tex
+++ b/eecs-thesis-template-main/thesis/sections/01_body/03_methodology.tex
@@ -157,7 +157,11 @@ Building off the aforementioned hardware components, it was then necessary to de
 In summary, the testbed was designed to be a portable, easily deployable system that could be used to test and validate the passive radar detection system. The enclosure was designed to house the RPi5, the NVME HAT, with the remaining system hardware components not specific to the testbed itself (possible to change out). This part of the project design was important for achieving the primary objectives, notably objective 2 as stated in \ref{sec:aims}.
 
 \section{Software}
+
 \subsection{SDR Software \label{sec:SDRsoftware}}
+When utilising SDR modules, it is necessary to have capabilities to demodulate and then process the received signals. This is typically done using SDR software, which is a type of software that allows for the reception and baseband processing of radio signals using SDR hardware. For this project, the RTL-SDR was used in conjunction with the following software tools:
+
+
 \subsection{Networking Requirements \label{sec:networking}}
 
 
