BladeRF Methodology Section

--- a/eecs-thesis-template-main/common/references/references.bib
+++ b/eecs-thesis-template-main/common/references/references.bib
@@ -431,6 +431,13 @@
   note         = {Accessed: 2024-09-02}
 }
 
+@misc{limesdr_usb,
+  title = {LimeSDR-USB},
+  author = {myriadrf},
+  year = {2024},
+  url = {https://wiki.myriadrf.org/LimeSDR-USB},
+  note = {Accessed: 2024-09-10}
+}
 
 
 
