--- a/eecs-thesis-template-main/thesis/sections/01_body/04_results.tex
+++ b/eecs-thesis-template-main/thesis/sections/01_body/04_results.tex
@@ -1,7 +1,11 @@
 \chapter{Results and Discussion \label{sec:results}}
 \todo[inline]{Results: latency comparison, design cost, sucessful detection}
 
-\section{Detection Performance}
-\section{Latency Comparison}
+\section{Testbed Verification}
+Discuss how the components and system were tested and verified.
+
+\section{RTL-SDR vs LimeSDR}
+
+
 \section{Overall Design Cost}
 \section{Comparison to Existing Work}
